--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,37 @@
     transform: rotate(360deg);
   }
 }
+
+#footer {
+  background-image: url(./resources/images/cool.jpg);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+}
+
+a.social {
+  margin: 0 1rem;
+  transition: transform 250ms;
+  display: inline-block;
+}
+
+a.social:hover {
+  transform: translateY(-2px);
+}
+
+a.facebook {
+  color: #4968ad;
+}
+
+a.instagram {
+  color: #F56040;
+}
+
+a.github {
+  color: black;
+}
+
+a.linkedin {
+  color: #0e76a8;
+}
