--- a/src/App.css
+++ b/src/App.css
@@ -4,51 +4,20 @@
 
 .App {
   text-align: center;
+  font-family: Roboto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.stylizedSig {
+  font-family: 'Hurricane', cursive;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-#footer {
-  background-image: url(./resources/images/cool.jpg);
+.naubackground {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./resources/images/cool.jpg);
   width: 100%;
   height: 100%;
   background-size: cover;
   background-position: center center;
 }
-
 a.social {
   margin: 0 1rem;
   transition: transform 250ms;
@@ -64,7 +33,7 @@ a.facebook {
 }
 
 a.instagram {
-  color: #F56040;
+  color: orange;
 }
 
 a.github {
@@ -73,4 +42,44 @@ a.github {
 
 a.linkedin {
   color: #0e76a8;
+}
+
+
+
+/* Slideshow */
+
+.slideshow {
+  margin: 0 auto;
+  overflow: hidden;
+  max-width: 600px;
+}
+
+.slideshowSlider {
+  white-space: nowrap;
+  transition: ease 1000ms;
+}
+
+.slide {
+  display: inline-block;
+
+  height: 500px;
+  width: 100%;
+  border-radius: 40px;
+}
+
+/* Buttons */
+
+.slideshowDots {
+  text-align: center;
+}
+
+.slideshowDot {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+
+  cursor: pointer;
+  margin: 15px 7px 0px;
+  background-color: #9D7A62;
 }
